{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 323,
  "lineage": "06b6d31e-ceb1-7f5a-5862-e48fcd185bca",
  "resources": [
    {
      "module": "module.applicationloadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "applicationloadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:817189533007:loadbalancer/app/masterloadbalancer/1f01ec2de2894c98",
            "arn_suffix": "app/masterloadbalancer/1f01ec2de2894c98",
            "dns_name": "masterloadbalancer-1167926462.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:817189533007:loadbalancer/app/masterloadbalancer/1f01ec2de2894c98",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "masterloadbalancer",
            "security_groups": [
              "sg-0bb6f195393d7eefe"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02456f72a288327c1"
              },
              {
                "subnet_id": "subnet-05e41f579584cf79c"
              }
            ],
            "subnets": [
              "subnet-02456f72a288327c1",
              "subnet-05e41f579584cf79c"
            ],
            "vpc_id": "vpc-0e38ada39b89def12",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.public",
            "module.subnet_public.aws_subnet.public",
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.applicationloadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:817189533007:listener/app/masterloadbalancer/1f01ec2de2894c98/52c7214d4f16f929",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:817189533007:targetgroup/masterloadbalancer-targetgroup/8c156c00c2ac2485",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:817189533007:listener/app/masterloadbalancer/1f01ec2de2894c98/52c7214d4f16f929",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:817189533007:loadbalancer/app/masterloadbalancer/1f01ec2de2894c98",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.applicationloadbalancer.aws_lb.applicationloadbalancer",
            "module.applicationloadbalancer.aws_lb_target_group.alb_target_group",
            "module.security_groups.aws_security_group.public",
            "module.subnet_public.aws_subnet.public",
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.applicationloadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "health_check",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "HEALTHY",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:817189533007:listener-rule/app/masterloadbalancer/1f01ec2de2894c98/52c7214d4f16f929/3943d3c0e50d3136",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [
                  {
                    "key": "",
                    "value": "bar"
                  },
                  {
                    "key": "health",
                    "value": "check"
                  }
                ],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:817189533007:listener-rule/app/masterloadbalancer/1f01ec2de2894c98/52c7214d4f16f929/3943d3c0e50d3136",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:817189533007:listener/app/masterloadbalancer/1f01ec2de2894c98/52c7214d4f16f929",
            "priority": 1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.applicationloadbalancer.aws_lb.applicationloadbalancer",
            "module.applicationloadbalancer.aws_lb_listener.http",
            "module.applicationloadbalancer.aws_lb_target_group.alb_target_group",
            "module.security_groups.aws_security_group.public",
            "module.subnet_public.aws_subnet.public",
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.applicationloadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:817189533007:targetgroup/masterloadbalancer-targetgroup/8c156c00c2ac2485",
            "arn_suffix": "targetgroup/masterloadbalancer-targetgroup/8c156c00c2ac2485",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:817189533007:targetgroup/masterloadbalancer-targetgroup/8c156c00c2ac2485",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "masterloadbalancer-targetgroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e38ada39b89def12"
          },
          "dependencies": [
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817189533007:security-group/sg-004b2509e3b454df1",
            "description": "Security group to access private ports",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-004b2509e3b454df1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "internal",
            "name_prefix": "",
            "owner_id": "817189533007",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "internal"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e38ada39b89def12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.primary_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817189533007:security-group/sg-0bb6f195393d7eefe",
            "description": "Public access security group",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0bb6f195393d7eefe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public",
            "name_prefix": "",
            "owner_id": "817189533007",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e38ada39b89def12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_private",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-071661259aeb674fa",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-83-70-173.compute-1.amazonaws.com",
            "public_ip": "54.83.70.173",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.subnet_private",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "masterngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-071661259aeb674fa",
            "id": "nat-0bea95204cf7d856c",
            "network_interface_id": "eni-0248637906f19a96d",
            "private_ip": "10.0.1.137",
            "public_ip": "54.83.70.173",
            "subnet_id": "subnet-05e41f579584cf79c",
            "tags": {
              "Name": "ngw-privatesubnet"
            }
          },
          "dependencies": [
            "module.subnet_private.aws_eip.eip",
            "module.subnet_public.aws_subnet.public",
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_private",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05eed1077602b6bcb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bea95204cf7d856c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05eed1077602b6bcb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet_private.aws_eip.eip",
            "module.subnet_private.aws_nat_gateway.masterngw",
            "module.subnet_private.aws_route_table.private_route_table",
            "module.subnet_public.aws_subnet.public",
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_private",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05eed1077602b6bcb",
            "owner_id": "817189533007",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "privatesubnet-rt"
            },
            "vpc_id": "vpc-0e38ada39b89def12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_private",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064f974e327f23051",
            "route_table_id": "rtb-05eed1077602b6bcb",
            "subnet_id": "subnet-07b5baf3b643796b3"
          },
          "dependencies": [
            "module.subnet_private.aws_route_table.private_route_table",
            "module.subnet_private.aws_subnet.private",
            "module.vpc.aws_vpc.primary_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b1f6efb24d277df",
            "route_table_id": "rtb-05eed1077602b6bcb",
            "subnet_id": "subnet-033a28e36960ac7d5"
          },
          "dependencies": [
            "module.subnet_private.aws_route_table.private_route_table",
            "module.subnet_private.aws_subnet.private",
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_private",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817189533007:subnet/subnet-07b5baf3b643796b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.128.0/24",
            "id": "subnet-07b5baf3b643796b3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817189533007",
            "tags": {
              "Name": "privatesubnet 1"
            },
            "tags_all": {
              "Name": "privatesubnet 1"
            },
            "vpc_id": "vpc-0e38ada39b89def12"
          },
          "dependencies": [
            "module.vpc.aws_vpc.primary_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817189533007:subnet/subnet-033a28e36960ac7d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.129.0/24",
            "id": "subnet-033a28e36960ac7d5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817189533007",
            "tags": {
              "Name": "privatesubnet 2"
            },
            "tags_all": {
              "Name": "privatesubnet 2"
            },
            "vpc_id": "vpc-0e38ada39b89def12"
          },
          "dependencies": [
            "module.vpc.aws_vpc.primary_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnet_public",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817189533007:internet-gateway/igw-0f81792067c642c33",
            "id": "igw-0f81792067c642c33",
            "owner_id": "817189533007",
            "tags": {
              "Name": "igw-publicsubnet"
            },
            "vpc_id": "vpc-0e38ada39b89def12"
          },
          "dependencies": [
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_public",
      "mode": "managed",
      "type": "aws_route",
      "name": "gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f81792067c642c33",
            "id": "r-rtb-03eb03c69954f4f761080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03eb03c69954f4f76",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet_public.aws_internet_gateway.internet_gateway",
            "module.subnet_public.aws_route_table.public_route_table",
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_public",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03eb03c69954f4f76",
            "owner_id": "817189533007",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rt-publicsubnet"
            },
            "vpc_id": "vpc-0e38ada39b89def12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_public",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0386b4d4f7f9ee7e8",
            "route_table_id": "rtb-03eb03c69954f4f76",
            "subnet_id": "subnet-05e41f579584cf79c"
          },
          "dependencies": [
            "module.subnet_public.aws_route_table.public_route_table",
            "module.subnet_public.aws_subnet.public",
            "module.vpc.aws_vpc.primary_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c044795e3fe41fa",
            "route_table_id": "rtb-03eb03c69954f4f76",
            "subnet_id": "subnet-02456f72a288327c1"
          },
          "dependencies": [
            "module.subnet_public.aws_route_table.public_route_table",
            "module.subnet_public.aws_subnet.public",
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_public",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817189533007:subnet/subnet-05e41f579584cf79c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05e41f579584cf79c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817189533007",
            "tags": {
              "Name": "publicsubnet 1"
            },
            "tags_all": {
              "Name": "publicsubnet 1"
            },
            "vpc_id": "vpc-0e38ada39b89def12"
          },
          "dependencies": [
            "module.vpc.aws_vpc.primary_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817189533007:subnet/subnet-02456f72a288327c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-02456f72a288327c1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "817189533007",
            "tags": {
              "Name": "publicsubnet 2"
            },
            "tags_all": {
              "Name": "publicsubnet 2"
            },
            "vpc_id": "vpc-0e38ada39b89def12"
          },
          "dependencies": [
            "module.vpc.aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "primary_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:817189533007:vpc/vpc-0e38ada39b89def12",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a9da3ddf8d9f4943",
            "default_route_table_id": "rtb-03a8eaf1b6d2ff7c4",
            "default_security_group_id": "sg-01ed31f1ad624d2a0",
            "dhcp_options_id": "dopt-96287eec",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e38ada39b89def12",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03a8eaf1b6d2ff7c4",
            "owner_id": "817189533007",
            "tags": {
              "Name": "mastervpc"
            },
            "tags_all": {
              "Name": "mastervpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.webinstance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-096fda3c22c1c990a",
            "arn": "arn:aws:ec2:us-east-1:817189533007:instance/i-0ddbdc24d2c5653e7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:817189533007:key/da75a8fe-107f-4ed3-a56a-facb264d4e46",
                "snapshot_id": "snap-03f2e24f30f580353",
                "throughput": 0,
                "volume_id": "vol-05d2a4e01654c4c0d",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ddbdc24d2c5653e7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newkeypait",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0334488225f76420e",
            "private_dns": "ip-10-0-129-157.ec2.internal",
            "private_ip": "10.0.129.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:817189533007:key/da75a8fe-107f-4ed3-a56a-facb264d4e46",
                "throughput": 0,
                "volume_id": "vol-05d2a4e01654c4c0d",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-033a28e36960ac7d5",
            "tags": {
              "Name": "Masterwebserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-004b2509e3b454df1"
            ]
          },
          "dependencies": [
            "module.kms.aws_kms_key.masterkey",
            "module.security_groups.aws_security_group.internal",
            "module.subnet_private.aws_subnet.private",
            "module.vpc.aws_vpc.primary_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}